Make Horizon Dashboard settings operator overrideable.
We want to allow operators to override Horizon's default
settings. This involves moving local_settings.d out of the read only
snap filesystem, and into $SNAP_COMMON. This is a little bit tricky.

First, we patch settings.py and local_settings.py as we're building the
snap, to include a LOCAL_PATH in $SNAP_COMMON.

Then, we add a template with the rest of our default overrides,
and write it out to $SNAP_COMMON/horizon/local_settings.d

Finally we tweak our tests so that we can give our overrides a
spin. As a bonus, this makes test_horizonglogin.py a lot easier to run
in our multipass testing scenario!

`tox -e basic` now also runs selenium tests, as well.

Change-Id: Ic0ce18cfa1b97a93191da749095d8aa2270d5aeb

--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -18,6 +18,8 @@ for project in neutron nova keystone glance; do
     mkdir -p ${SNAP_COMMON}/etc/${project}/${project}.conf.d
     cp -r ${SNAP}/etc/${project}/${project}.conf.d/* ${SNAP_COMMON}/etc/${project}/${project}.conf.d || true # Skip conf files that have been moved into templates
 done
+# Make a place for our horizon config overrides to live
+mkdir -p ${SNAP_COMMON}/etc/horizon/local_settings.d
 
 snap-openstack setup  # Sets up templates for the first time.
 
