Enable loading and saving of question answers.
This lays the groundwork for interactive init, as well as being able
to specify control and compute nodes.

Added preliminary config lists for control and compute nodes. Added
appropriate default snapctl config settings in install script.

Also changed "binary" questions to "boolean" questions, as that's
better wording, and it means that my docstrings are not a confusing
mix of "boolean" and "binary" when I forget which term I used.

Snuck in a fix for the "basic" testing environment -- it was missing
the Python requirements, and was therefore failing!

Change-Id: I7f95ab68f924fa4d4280703c372b807cc7c77758

--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -1,11 +1,21 @@
 #!/bin/bash
 set -ex
 
+# Config
+# Set default answers to the questions that microstack.init asks.
+# TODO: put this in a nice yaml format, and parse it.
 snapctl set \
-        ospassword=keystone \
-        extgateway=10.20.20.1 \
-        extcidr=10.20.20.1/24 \
-        dns=1.1.1.1
+        questions.ip-forwarding=true \
+        questions.dns=1.1.1.1 \
+        questions.ext-gateway=10.20.20.1 \
+        questions.ext-cidr=10.20.20.1/24 \
+        questions.os-password=keystone \
+        questions.rabbit-mq=true \
+        questions.database-setup=true \
+        questions.nova-setup=true \
+        questions.neutron-setup=true \
+        questions.glance-setup=true \
+        questions.post-setup=true \
 
 # MySQL snapshot for speedy install
 # snapshot is a mysql data dir with
@@ -22,6 +32,3 @@ done
 mkdir -p ${SNAP_COMMON}/etc/horizon/local_settings.d
 
 snap-openstack setup  # Sets up templates for the first time.
-
-
-
