Ported and updated launch script
Moved security rules and keypair creation into init first.

Launch script now takes image name as positional argument, and name of
instance as a named argument. This makes it work more like launch in
other Canonical tools.

Written in Python, for ease of maintenance.

--retry and --wait args allow it to behave like tests expect it to,
while humans will get a much more intuitive (and much less noisy)
experience.

Also increased time we wait for a ping on the host, to allow for
slower, pure qemu, emulation times, and bring it in line with what
Tempest does in similar situations.

Change-Id: I11dcc098012468e9c88dcc7af78cde6920f31ecd

--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -15,6 +15,8 @@ snapctl set \
         questions.nova-setup=true \
         questions.neutron-setup=true \
         questions.glance-setup=true \
+        questions.key-pair="id_microstack" \
+        questions.security-rules=true \
         questions.post-setup=true \
 
 # MySQL snapshot for speedy install
