Allow off-host access to horizon dashboard by default.
Added a question which allows off host access to horizon
dashboard. Activated it by default, as that's probably what people are
going to actually want.

Change-Id: I0d5bccb3b2eb2b409072d8ae5f8b923942386119

--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -18,6 +18,7 @@ snapctl set \
         config.network.compute-ip=10.20.20.1 \
         config.network.ext-cidr=10.20.20.1/24 \
         config.network.security-rules=true \
+        config.network.dashboard-allowed-hosts="*" \
         ;
 
 # Passwords, certs, etc.
