Initial DPDK support
Adding initial support for OVS DPDK.

Signed-off-by: Gabor Meszaros <gabor@meszaros.pw>
Change-Id: I1f87188bd8b4b928108674a35e9a9c309e9f6d17

--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -22,4 +22,7 @@ done
 # Make a place for our horizon config overrides to live
 mkdir -p ${SNAP_COMMON}/etc/horizon/local_settings.d
 
+# provide initial openvswitch binaries alternatives
+${SNAP}/bin/ovs-alternatives --install
+
 snap-openstack setup  # Sets up templates for the first time.
