Fix service enablement during init
Some services were disabled in the install hook and then started during
the init phase without being enabled. Thus, after a machine restart they
were not brought back up by systemd.

Change-Id: I27f7d7fa6b8df104567b91b5bc998ebe98b478a2

--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -24,12 +24,15 @@ snapctl stop --disable $SNAP_INSTANCE_NAME.nova-api-metadata
 snapctl stop --disable $SNAP_INSTANCE_NAME.nova-spicehtml5proxy
 snapctl stop --disable $SNAP_INSTANCE_NAME.nova-scheduler
 
+snapctl stop --disable $SNAP_INSTANCE_NAME.horizon-uwsgi
+
 snapctl stop --disable $SNAP_INSTANCE_NAME.neutron-api
 
 snapctl stop --disable $SNAP_INSTANCE_NAME.glance-api
 snapctl stop --disable $SNAP_INSTANCE_NAME.registry
 
 snapctl stop --disable $SNAP_INSTANCE_NAME.cinder-uwsgi
+snapctl stop --disable $SNAP_INSTANCE_NAME.cinder-scheduler
 
 snapctl stop --disable $SNAP_INSTANCE_NAME.ovsdb-server
 snapctl stop --disable $SNAP_INSTANCE_NAME.neutron-ovn-metadata-agent
@@ -38,6 +41,9 @@ snapctl stop --disable $SNAP_INSTANCE_NAME.ovn-ovsdb-server-nb
 snapctl stop --disable $SNAP_INSTANCE_NAME.ovs-vswitchd
 snapctl stop --disable $SNAP_INSTANCE_NAME.ovn-northd
 snapctl stop --disable $SNAP_INSTANCE_NAME.ovn-controller
+
+snapctl stop --disable $SNAP_INSTANCE_NAME.rabbitmq-server
+snapctl stop --disable $SNAP_INSTANCE_NAME.mysqld
 
 snapctl stop --disable $SNAP_INSTANCE_NAME.iscsid
 snapctl stop --disable $SNAP_INSTANCE_NAME.target
